# ros2-smart-car

./: .gitignore  README.md  智能四驱小车软件设计概要报告.docx  智能四驱小车项目软件需求分析报告 .docx  智能小车会议记录10.14.doc  智能小车会议记录9.23.doc  智能小车项目会议记录9.9.docx
doc/: vision_yolo11.md  智能小车会议记录10.28.doc
doc/大二上/: ROS2控制.md  后两阶段任务简单总结.md  智能四驱小车项目详细设计分析报告.docx
doc/大二上/答辩/: 任务书.docx  进阶式挑战性综合项目I中期报告.docx  进阶式挑战性综合项目I中期考核表.docx  进阶式挑战性综合项目I成绩考核表.docx  进阶式挑战性综合项目I机器人系统设计总结报告 .docx  进阶式挑战性综合项目I汇总材料总封面.docx
ros2_command/: pc.py  readme
ros2_ws/src/smart_car_decision/: package.xml  requirements-vision.txt  setup.cfg  setup.py
ros2_ws/src/smart_car_decision/config/: decision.yaml
ros2_ws/src/smart_car_decision/launch/: decision_bringup.launch.py  yolo11_camera.launch.py
ros2_ws/src/smart_car_decision/smart_car_decision/: __init__.py  common.py  decision_controller.py  laser_obstacle_monitor.py  tcp_command_bridge.py  yolo11_camera_node.py
src/Beep/: .mxproject  Beep.ioc
src/Beep/Debug/: makefile
src/LED/: .cproject  LED.ioc
src/LED/Core/Src/: main.c
src/LED/Debug/: LED.elf  LED.hex  LED.list  LED.map  makefile
src/LED/Debug/Core/Src/: main.cyclo  main.su  subdir.mk
src/hello/: .cproject  hello Debug.launch  hello.ioc
src/hello/Core/Src/: main.c
src/hello/Debug/: hello.elf  hello.list  hello.map  makefile
src/hello/Debug/Core/Src/: main.cyclo  main.su
src/hello/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
